@@ -2,6 +2,9 @@
 
 	* src/init.c: Add two 'void' for proper prototypes pleasing clang-15
 
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
+	* .github/workflows/docker.yaml (name): Idem
+
 2022-05-06  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): New release 0.4.19
